@@ -1,5 +1,6 @@
 require 'platform'
 require 'English'
+require 'Log'
 
 # borrowed (with modifications) from the RSCM project
 module CommandLine
